NEW-SRS: Adaptations to re-enable and adapt the new SRS in WebCert (work in progress)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
@@ -1,147 +1,104 @@
-<!--<div ng-show="srs.userHasSrsFeature && srs.srsApplicable">-->
-    <!--<span>DEBUG: USER HAS SRS FEATURE AND SRS APPLICABLE</span>-->
-<!--</div>-->
+<!-- PATIENT CONSENT CHECKBOX--->
 <div class="tab-content-title-row">
-                <span class="tab-content-title-row-title">
-    <wc-checkbox-wrapper>
-        <input type="checkbox" name="capacityForWorkForecast{{id}}" ng-true-value="'JA'" ng-false-value="'NEJ'" ng-model="srs.consent"
-               class="ng-pristine ng-untouched ng-valid" ng-change="setConsent({{srs.consent}})">
-        <!--<input type="checkbox" name="srs-patient-consent-checkbox" ng-attr-id="srs_patient_consent_checkbox" />-->
+    <span class="tab-content-title-row-title">
+<!--        <wc-checkbox-wrapper>-->
+<!--            <input type="checkbox" name="srs_patient_consent_checkbox" ng-true-value="'JA'" ng-false-value="'NEJ'" ng-model="srs.consent"-->
+<!--                   class="ng-pristine ng-untouched ng-valid" ng-change="setConsent({{srs.consent}})">-->
 
-        <label ng-attr-for="capacityForWorkForecast{{id}}">
-        <!--<label ng-attr-for="srs_patient_consent_checkbox">-->
-            <span uib-popover="{{!srs.consentInfo ? 'SAMTYCKE-ALTERNATIV-INFO' :''}}"
-                  popover-popup-delay="300" popover-append-to-body="true"
-                  popover-placement="top">Patientens samtycke</span>
-        </label>
-    </wc-checkbox-wrapper>
-                </span>
+<!--            <label ng-attr-for="srs_patient_consent_checkbox">-->
+<!--                <span uib-popover="{{!srs.consentInfo ? 'SAMTYCKE-ALTERNATIV-INFO' :''}}"-->
+<!--                      popover-popup-delay="300" popover-append-to-body="true"-->
+<!--                      popover-placement="top">Patientens samtycke</span>-->
+<!--            </label>-->
+<!--        </wc-checkbox-wrapper>-->
+        <div class="line form-group ng-scope">
+        <p>Patienten samtycker till att delta i SRS pilotprojekt</p>
+        <label class="radio-inline line">
+              <input type="radio" name="consent-to-srs-radio" ng-value="'JA'" ng-model="srs.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent('true')"> Ja</label>
+        <label class="radio-inline line">
+              <input type="radio" name="consent-to-srs-radio" ng-value="false" ng-model="srs.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent(false)"> Nej</label>
+      </div>
 
+    </span>
 </div>
 
-<!--<div class="srs-diagnos-row" ng-class="{'has-diagnose' : !vm.noDataMessage.warning && !vm.noDataMessage.incorrectKodverk}">-->
+<!-- DIAGNOSIS HEADER--->
 <div class="srs-diagnos-row" ng-class="{'has-diagnose' : srs.diagnosKod && srs.diagnosBeskrivning}">
     <div class="srs-panel-title" ng-show="srs.diagnosKod">
-        <h4>
+<!--        <h4>-->
             <span id="srs_diagnos_heading">{{srs.diagnosKod}} - {{srs.diagnosBeskrivning}}</span>
-        </h4>
+<!--        </h4>-->
     </div>
 </div>
-
 <wc-support-panel-scrollable-body dom-id="srs-panel-scrollable-body">
-    <!--<wc-srs-help-display ng-if="srsId" id='{{srsId}}'></wc-srs-help-display>-->
-    <!-- GAMLA SRS -->
+<!-- CONSENT ERROR MESSAGE -->
+    <div ng-if="srs.consentError">
+        <wc-srs-error-box message-string="srs.consentError"></wc-srs-error-box>
+    </div>
+
     <div class="panel-body" ng-show="srs.userHasSrsFeature && srs.srsApplicable">
+<!-- CONSENT INFO MESSAGE: E.G. "Det SRS-stöd som visas är för koden F43" -->
         <div ng-if="srs.consentInfo">
             <wc-srs-info-box message-string="srs.consentInfo"></wc-srs-info-box>
         </div>
 
-        <!-- TO BE REMOVED start -->
-        <!--<div>-->
-            <!--<div class="floatLeft">Patienten samtycker till att delta i SRS pilotprojektet</div>-->
-            <!--<div-->
-                    <!--style="float:right"-->
-                    <!--class="glyphicon glyphicon-question-sign"-->
-                    <!--uib-popover-template="externalConsent.templateUrl" popover-trigger="outsideClick"-->
-                    <!--popover-placement="auto right" popover-append-to-body="false" popover-is-open="consentInfoOpen">-->
-            <!--</div>-->
-
-            <!--<div class="line form-group ng-scope">-->
-                <!--<label class="radio-inline line">-->
-                    <!--<input type="radio" name="capacityForWorkForecast{{id}}" ng-value="'JA'" ng-model="srs.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent('true')"> Ja</label>-->
-            <!--</div>-->
-            <!--<div class="line form-group ng-scope">-->
-                <!--<label class="radio-inline line">-->
-                    <!--<input type="radio" name="capacityForWorkForecast{{id}}" ng-value="false" ng-model="srs.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent(false)"> Nej</label>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!-- TO BE REMOVED end -->
-
-        <br>
-        <div ng-if="srs.consentError">
-            <wc-srs-error-box message-string="srs.consentError"></wc-srs-error-box>
-        </div>
-
         <div>
             <div ng-show="srs.consent === 'JA' && !srs.consentError">
+<!-- RISK DIAGRAM -->
                 <div>
                     <wc-srs-risk-diagram />
                 </div>
-                <br>
-                <hr>
+<!-- LÄKARENS EGEN BEDÖMNING --->
+                <div id="srs-own-opinion" ng-if="srs.prediction.probabilityOverLimit">
+                    <hr/>
+                    <p>Enligt min läkarbedömning anser jag att patientens risk jämfört ...?</p>
+                    <div class="srs-question">
+                        <label class="radio-inline line">
+                            <input type="radio" name="risk-opinion-higher" ng-value="'HOGRE'" ng-model="srs.prediction.opinion" ng-change="setOpinion('HOGRE')"/>
+                            Högre
+                        </label>
+                        <label class="radio-inline line">
+                            <input type="radio" name="risk-opinion-correct" ng-value="'KORREKT'" ng-model="srs.prediction.opinion" ng-change="setOpinion('KORREKT')"/>
+                            Korrekt
+                        </label>
+                        <label class="radio-inline line">
+                            <input type="radio" name="risk-opinion-lower" ng-value="'LAGRE'" ng-model="srs.prediction.opinion" ng-change="setOpinion('LAGRE')"/>
+                            Lägre
+                        </label>
+                    </div>
+                    <div ng-if="srs.prediction.opinionError">
+                        <wc-srs-error-box message-string="srs.prediction.opinionError"></wc-srs-error-box>
+                    </div>
+                    <br />
+                </div>
+<!-- BERÄKNA RISK: FRÅGOR -->
+                <hr class="srs-thick-divider"/>
 
-                <!--<h3 class="floatLeft">Beräkning av risk för lång sjukskrivning</h3>-->
-                <h3 class="floatLeft">Beräkna individuell risk</h3>
+                <h3 class="floatLeft">Beräkna patientens risk</h3>
                 <div class="line">
                     <a id="questionsCollapser" data-toggle="collapse" ng-click="isCollapsed=!isCollapsed" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
                     </a>
                 </div>
-                <br>
-                <br>
+                <br/>
+                <br/>
                 <div id="collapseExample" class="panel-collapse collapse in">
                     <wc-srs-questionaire></wc-srs-questionaire>
                 </div>
+                <hr class="srs-thick-divider"/>
                 <wc-srs-result></wc-srs-result>
             </div>
 
         </div>
     </div>
 
-
-  <!--<span ng-if="vm.activeDiagnose">-->
-
-     <!--<wc-alert-message alert-message-id="fmb-not-original-diagnose-for-{{vm.activeDiagnose.diagnosKod}}"-->
-                       <!--alert-severity="info"-->
-                       <!--ng-if="vm.activeDiagnose.diagnosKod !== vm.activeDiagnose.originalDiagnosKod">-->
-      <!--Det FMB-stöd som visas är för koden {{vm.activeDiagnose.diagnosKod}} - {{vm.activeDiagnose.diagnosBeskrivning}}.-->
-    <!--</wc-alert-message>-->
-
-    <!--<div ng-repeat="section in vm.sections" class="fmb-section">-->
-
-        <!--<h4 class="fmb-section-headline" ng-attr-id="fmb_heading_{{section.heading}}">-->
-          <!--<span dynamic-label key="{{'fmb.' + section.heading}}"></span>-->
-        <!--</h4>-->
-
-        <!--<section ng-attr-id="fmb_text_{{::section.heading}}" ng-if="section.data.text">-->
-          <!--<wc-expandable-content content="section.data.text" threshold-pixel-height="80px" link-dom-id="fmb-text-expandable-content-link-{{::section.heading}}">-->
-
-          <!--</wc-expandable-content>-->
-        <!--</section>-->
-
-        <!--<section ng-attr-id="fmb_text_{{::section.heading}}_list" ng-if="section.data.list">-->
-          <!--<ul class="fmb-bullet-list" ng-repeat="bullet in section.data.list track by $index">-->
-            <!--<li ng-attr-id="fmb_bullet_{{::section.heading}}_{{$index}}" ng-bind-html="bullet"></li>-->
-          <!--</ul>-->
-        <!--</section>-->
-
-         <!--<div ng-if="!section.data" class="missing-info">-->
-           <!--För den angivna diagnosen finns ingen FMB-information för <span dynamic-label-->
-                                                                           <!--key="{{'fmb.' + section.heading}}"></span>-->
-        <!--</div>-->
-
-    <!--</div>-->
-    <!--<div class="fmb-more-information-section">-->
-      <!--<h4 ng-if="vm.referensLink">Mer Information</h4>-->
-      <!--<a href="{{vm.referensLink}}"-->
-        <!--target="_blank" rel="noopener noreferrer">-->
-         <!--{{vm.referensDescr}}-->
-        <!--<i ng-if="vm.referensDescr" class="external-link-icon material-icons">launch</i>-->
-      <!--</a>-->
-    <!--</div>-->
-  <!--</span>-->
-
   <!-- in case none of the diagnoses had any info to show -->
   <wc-alert-message alert-message-id="{{vm.noDataMessage.info}}" alert-severity="info"
                     ng-if="vm.noDataMessage.info"></wc-alert-message>
 
   <div ng-if="!srs.diagnosKod || vm.noDataMessage.incorrectKodverk" class="no-diagnose-entered">
-
-      <!-- No diagnosis -->
-      <span dynamic-label key="srs.warn.no-diagnosis-set"></span>
-
-    <!--<img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/fmb_no_diagnose.svg"/>-->
-    <div ng-if="vm.noDataMessage.warning" dynamic-label key="{{::vm.noDataMessage.warning }}"></div>
+    <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/fmb_no_diagnose.svg"/>
+    <div ng-if="!srs.diagnosKod" dynamic-label key="srs.warn.no-diagnosis-set"></div>
     <div ng-if="vm.noDataMessage.incorrectKodverk"
          dynamic-label key="{{::vm.noDataMessage.incorrectKodverk }}"
          uib-popover="{{'FMB-stöd ska ej hämtas upp.'}}"
