--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
@@ -14,6 +14,9 @@ wc-srs-panel-tab {
       border-bottom: 1px solid $wc-color-15;
     }
 
+    .atgard {
+      color: red;
+    }
 
     .fmb-diagnos-description {
 
