--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsRiskDiagram.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsRiskDiagram.directive.html
@@ -3,7 +3,7 @@
             <div class="risk-widget">
                 <div class="risk-widget-header">
                     <h2 class="risk-widget-title">
-                        <span>Risk för sjukskrivning längre än...</span>
+                        <span>Risk för sjukskrivning längre än 90 dagar, i procent</span>
                         <div style="float:right"
                              class="glyphicon glyphicon-question-sign"
                              uib-tooltip-html="popoverTextRiskChart"
@@ -15,6 +15,12 @@
                 </div>
                 <div class="risk-widget-content">
                     <div class="chart-container" id="riskChart"></div>
+                </div>
+                <div class="risk-widget-textual">
+                    <ul>
+                        <li>Genomsnittlig risk för {{srs.diagnosKod}} {{srs.diagnosBeskrivning}}: {{srs.prediction.prevalence*100|number: '0'}}%</li>
+                        <li data-ng-if="srs.prediction.probabilityOverLimit">Patientens risk för {{srs.diagnosKod}} {{srs.diagnosBeskrivning}}: {{srs.prediction.probabilityOverLimit*100|number: '0'}}%</li>
+                    </ul>
                 </div>
             </div>
         </div>
