--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/fmbVarning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/fmbVarning.directive.html
@@ -2,4 +2,7 @@
     <wc-alert-message ng-if="fmbVarning.overskriderRekommenderadSjukskrivningstid" alert-severity="warning">
       {{fmbVarning.text}}
     </wc-alert-message>
+    <wc-alert-message ng-if="fmbVarning.error" alert-severity="warning">
+      <span dynamic-label key="fmb.varning.error"></span>
+    </wc-alert-message>
 </div>
