--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
@@ -1,6 +1,16 @@
 .utkast-footer {
   margin-bottom: 50px;
 
+  display: flex;
+  flex-wrap: wrap;
+
+  wc-utkast-footer-sign {
+    margin-right: 25px;
+  }
+
+  .vardadmin-footer {
+    flex: 1 1 100%;
+  }
 
   .admin-row {
     display: flex;
@@ -11,5 +21,12 @@
   .icon-wc-ikon-30:before {
     margin-left: 0;
     vertical-align: middle;
-  } 
+  }
+
+  .intygs-id {
+    @extend %wc-typo-09;
+    color: $wc-color-07;
+    flex: 1 1 0;
+    text-align: right;
+  }
 }
