INTYGFV-10855: Visa intygsid i felmeddelanden

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
@@ -3,7 +3,10 @@
 </div>
 <wc-bottom-fadeout>
   <div class="modal-body">
-    <div id="dialogErrorText" ng-bind-html="bodyText"></div>
+    <p id="dialogErrorText" bind-html-compile="bodyText"></p>
+    <p ng-if="certificateId">
+      Ange intygets ID för snabbare hantering: {{certificateId}}
+    </p>
   </div>
 </wc-bottom-fadeout>
 <div class="modal-footer">
