--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -48,6 +48,7 @@
   @import 'components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss';
   @import 'components/wcDeprecatedIntygstypeMessage/wcDeprecatedIntygstypeMessage.directive.scss';
   @import 'components/wcDropdown/wcDropdown.directive.scss';
+  @import 'components/wcError/wcError.directive.scss';
   @import 'components/wcExpandableContent/wcExpandableContent.directive.scss';
   @import 'components/wcFragaKomplettering/wcFragaKomplettering.directive.scss';
   @import 'components/wcHelp/wcHelp.directive.scss';
@@ -161,6 +162,7 @@
   @import 'utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.scss';
   @import 'utkast/utkastHeader/wcUtkastStatus/wcUtkastStatus.directive.scss';
   @import 'utkast/wcFieldSigningDoctor/wcFieldSigningDoctor.directive.scss';
+  @import 'utkast/wcIntegrationUtkastDeleted/wcIntegrationUtkastDeleted.directive.scss';
   @import 'utkast/wcUtkastErrorSummary/wcUtkastErrorSummary.directive.scss';
   @import 'utkast/wcUtkastPatientAddressUpdater/wcUtkastPatientAddressUpdater.directive.scss';
   // endinjector
