INTYGFV-11436: Generell driftbanner för WC/MI. ej backendkopplad än

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -6,6 +6,7 @@
   @import 'css/mixins/mixins';
 
   // injector
+  @import '../app-shared/servicebanner/serviceBanner.directive.scss';
   @import '../app-shared/unified-view/components/_variables.scss';
   @import '../app-shared/unified-view/components/uvAlertMessage/uvAlertMessage.directive.scss';
   @import '../app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
