--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -6,6 +6,7 @@
 
 // Component styles are injected through grunt
 // injector
+@import '../app-shared/servicebanner/serviceBanner.directive.scss';
 @import '../app-shared/unified-view/components/_variables.scss';
 @import '../app-shared/unified-view/components/uvAlertMessage/uvAlertMessage.directive.scss';
 @import '../app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
