--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -5,7 +5,7 @@
   <span ng-if="!viewState.intygProperties.isSent" class="tab-content-title-row-title">Kompletteringsbegäran och administrativa frågor</span>
 
   <ul class="nav navbar-nav" ng-if="viewState.intygProperties.isSent">
-    <li ng-class="{active: isFilterKomplettering}">
+    <li ng-class="{active: isFilterKomplettering}" ng-if="!viewState.activeErrorMessageKey">
       <a ng-click="setFilterKomplettering(true)" id="arende-filter-kompletteringsbegaran">
         Kompletteringsbegäran
         <span id="arende-kompletteringsbegaran-count" class="badge badge__stat" ng-if="config.intygContext.isSigned && unhandledKompletteringCount > 0">
@@ -13,7 +13,7 @@
         </span>
       </a>
     </li>
-    <li ng-class="{active: !isFilterKomplettering}">
+    <li ng-class="{active: !isFilterKomplettering}" ng-if="!viewState.activeErrorMessageKey">
       <a ng-click="setFilterKomplettering(false)" id="arende-filter-administrativafragor">
         Administrativa frågor
         <span id="arende-administrativafragor-count" class="badge badge__stat" 
@@ -32,10 +32,10 @@
   <wc-deprecated-intygstype-message timeout="true" wc-authority request-origin="!UTHOPP" message-suffix="arendeheader" intygs-type="{{::viewState.intygProperties.type}}"></wc-deprecated-intygstype-message>
 
     <!-- error message -->
-    <wc-alert-message id="arende-list-load-error"
-                      ng-if="viewState.intygProperties.isLoaded && viewState.doneLoading && viewState.activeErrorMessageKey" alert-severity="danger">
-      <span dynamic-label key="common.error.{{viewState.activeErrorMessageKey}}"></span>
-    </wc-alert-message>
+    <wc-error id="arende-list-load-error"
+              error="'common.error.'+viewState.activeErrorMessageKey"
+              ng-if="viewState.intygProperties.isLoaded && viewState.doneLoading && viewState.activeErrorMessageKey">
+    </wc-error>
 
     <wc-arende-intyg-not-sent-message ng-if="!viewState.intygProperties.isSent"></wc-arende-intyg-not-sent-message>
 
