NEW-SRS: Fix IE object assign bug. More code fixes before merge.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
@@ -96,7 +96,7 @@
                     ng-if="vm.noDataMessage.info"></wc-alert-message>
 
   <div ng-if="!srs.diagnosKod || vm.noDataMessage.incorrectKodverk" class="no-diagnose-entered">
-    <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/fmb_no_diagnose.svg"/>
+<!--    <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/fmb_no_diagnose.svg"/>-->
     <div ng-if="!srs.diagnosKod" dynamic-label key="srs.warn.no-diagnosis-set"></div>
     <div ng-if="vm.noDataMessage.incorrectKodverk"
          dynamic-label key="{{::vm.noDataMessage.incorrectKodverk }}"
@@ -109,7 +109,7 @@
 
 <div class="srs-footer">
   <span dynamiclink key="srsSkl" class="dark"></span>
-  <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png"
-       width="40"
-       height="26">
+<!--  <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png"-->
+<!--       width="40"-->
+<!--       height="26">-->
 </div>
