--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/_srs.scss
@@ -47,7 +47,7 @@ wc-srs-panel-tab {
     border:1px solid #E8E8E8;
     background-color: #F1F1F1;
     height: 13px;
-    width: 640px;
+    width: 120%;
     position: relative;
     left: -36px;
   }
