--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
@@ -18,7 +18,7 @@ wc-srs-panel-tab {
       color: red;
     }
 
-    .fmb-diagnos-description {
+    .srs-diagnos-description {
 
       display: inline-block;
 
@@ -49,7 +49,7 @@ wc-srs-panel-tab {
     }
   }
 
-  .fmb-section {
+  .srs-section {
     padding-bottom: 20px;
     color: $wc-color-07;
     h4 {
@@ -67,11 +67,11 @@ wc-srs-panel-tab {
     }
   }
 
-  .fmb-bullet-list {
+  .srs-bullet-list {
     padding-left: 30px;
   }
 
-  .fmb-more-information-section {
+  .srs-more-information-section {
     padding: 25px 20px 25px 20px;
     margin-left: -20px;
     margin-right: -20px;
