INTYG-6719: Implementing logic for Questions and answers. Work in progress.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.html
@@ -6,5 +6,5 @@
       Hanterad
     </label>
   </wc-checkbox-wrapper>
-  <span ng-if="!showHandleToggle()" class="handled-label"><i class="material-icons md-18">check</i> Hanterad</span>
+  <span ng-if="!showHandleToggle()&&showReadOnlyCheckBox()" class="handled-label"><i class="material-icons md-18">check</i> Hanterad</span>
 </div>
