INTYG-6719: If access confirmed, the user can view Arende on other units.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -1,8 +1,6 @@
 <div ng-form="arendeForm">
   <div class="card"
-       ng-if="showCreateArende()"
-       wc-check-vardenhet vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}"
-       wc-authority feature="SKAPA_NY_FRAGA" intygstyp="{{localViewState.parentViewState.intygProperties.type}}">
+       ng-if="showCreateArende()">
 
     <!-- New question form -->
     <div arende-draft-auto-save
