--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
@@ -9,7 +9,7 @@
               target-model="modelGetterSetter"
               target-model-options="{ getterSetter: true }"
               add-date-parser="loose"
-              on-blur="updateValidation()"
+              on-blur="onBlur()"
               dom-id="datepicker_{{::config.modelProp}}"
               min-date="{{config.minDate}}"
               max-date="{{config.maxDate}}" />
