--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss
@@ -1,3 +1,7 @@
+.risk-header-line {
+  display: block;
+}
+
 wc-srs-panel-tab {
   display: flex;
   flex-direction: column;
@@ -47,6 +51,10 @@ wc-srs-panel-tab {
         }
       }
     }
+  }
+
+  .riskHeader {
+    display: block;
   }
 
   .srs-section {
