NEW-SRS: Tydliggjort i koden att samtycke avser vårdenhet. Lagt till diagnos som nyckel för läkares egen bedömning. Fix för att rensa SRS när diagnos rensas. Anpassat diagram efter designspec.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -89,6 +89,7 @@
   @import 'components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.scss';
+  @import 'components/wcSupportPanelManager/wcSrsPanelTab/wcSrsRiskDiagram.directive.scss';
   @import 'components/wcSupportPanelManager/wcSupportPanelComponentRenderer.directive.scss';
   @import 'components/wcSupportPanelManager/wcSupportPanelManager.directive.scss';
   @import 'components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss';
