--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/servicebanner/serviceBanner.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/servicebanner/serviceBanner.directive.scss
@@ -1,6 +1,49 @@
+$wc-color-07: #212121;
+//Font priority
+$font-0: Roboto;
+$font-1: helvetica;
+$font-2: arial;
+$font-3: sans-serif;
+
+@mixin font-variant-regular($font-size: 14px) {
+  font-family: $font-0, $font-1, $font-2, $font-3;
+  font-size: $font-size;
+  font-weight: 400;
+}
+
+%wc-typo-07 {
+  @include font-variant-regular(14px);
+}
+
 service-banner {
+  display: block;
+
+  .text-container {
+    @extend %wc-typo-07;
+    display: block;
+    vertical-align: top;
+    position: relative;
+    padding: 8px 9px 7px 38px;
+    max-width: 1440px;
+    margin: 0 auto;
+
+    .alert-icon {
+      .material-icons, .icon-wc-ikon-alert02 {
+        position: absolute;
+        top: 5px;
+        left: 6px;
+      }
+    }
+
+    a:hover {
+      color: $wc-color-07;
+    }
+  }
+
   .alert {
-    border-radius: 0;
+    width: 100%;
+    padding: 0;
     margin-bottom: 0;
+    border-radius: 0;
   }
 }
