--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -334,6 +334,9 @@
 
     &.external-link {
       color: $wc-color-17;
+      &:hover + i {
+        color: $wc-color-21;
+      }
     }
 
     &:hover {
