INTYGFV-11513: Fixat hoverfärg på ikon för externa länkar. (#35)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -335,6 +335,9 @@
 
     &.external-link {
       color: $wc-color-17;
+      &:hover + i {
+        color: $wc-color-21;
+      }
     }
 
     &:hover {
