INTYGFV-11036: Sätter fokus border med ng-class istället för browsers (löser problem med fel färg i ie11)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePeriodField/wcDatePeriodField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePeriodField/wcDatePeriodField.directive.html
@@ -17,7 +17,9 @@
            datepicker-popup-template-url="/web/webjars/common/webcert/components/date/wcDatePickerField/datepickerPopup.template.html"
            wc-blur-on-enter
            wc-date-period-field-input
-           ng-focus="focused()"/>
+           ng-focus="focused()"
+           ng-class="{focus:isFocused}"
+    />
     <span class="input-group-btn">
       <button type="button" id="{{::domId}}-toggle" class="btn btn-default"  ng-class="{border:isFocused}" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen">
        <i class="material-icons">date_range</i>
