--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
@@ -4,7 +4,7 @@
            name="{{::domId}}"
            type="text"
            class="form-control"
-           ng-class="{'text-invalid': invalid}"
+           ng-class="{'text-invalid': invalid, focus:isFocused}"
            placeholder="åååå-mm-dd"
            ng-model="targetModel"
            ng-model-options="targetModelOptions"
