--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -6,7 +6,7 @@
     border-radius: 4px;
     transition: border-color .36s ease-in-out, box-shadow .36s ease-in-out;
     z-index: 1;
-    &:focus {
+    &.focus {
       outline: none !important;
       border: 1px solid $wc-color-21;
       //box-shadow: 0 4px 2px -2px $black_12;
