--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/receiver/wcApproveReceiversButton/wcApproveReceiversButton.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/receiver/wcApproveReceiversButton/wcApproveReceiversButton.directive.html
@@ -2,6 +2,8 @@
         id="open-approve-receivers-dialog-btn"
         class="btn btn-primary ng-hide"
         ng-show="isEnabled()"
+        wc-check-vardenhet
+        vardenhet="{{vardenhet}}"
         ng-click="approveReceiversTooltip=false;openDialog()"
         uib-popover="Öppnar ett fönster där du kan välja vilka intygsmottagare intyget får skickas till."
         popover-is-open="approveReceiversTooltip"
