NEW-SRS: Gjort om presentationen för Tänk på att och Åtgärdsrekommendationer

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
@@ -81,8 +81,8 @@
 
             <h3 class="floatLeft">Beräkna patientens risk</h3>
             <div class="line">
-                <a id="questionsCollapser" data-toggle="collapse" ng-click="onRecommendationCollapserClicked()" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
+                <a id="questionsCollapser" data-toggle="collapse" ng-click="isQuestionsCollapsed=!isQuestionsCollapsed" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isQuestionsCollapsed, 'glyphicon-menu-up': !isQuestionsCollapsed}"></i>
                 </a>
             </div>
             <br/>
